%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!1101 &-3973368668982835819
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsCrouching
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: -1337032904263189448}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.7308991
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1107 &-3435415822455484320
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 1988305062690407793}
    m_Position: {x: 440, y: 120, z: 0}
  - serializedVersion: 1
    m_State: {fileID: -1337032904263189448}
    m_Position: {x: 440, y: -40, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 1988305062690407793}
--- !u!1101 &-2499467786845625618
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: IsCrouching
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1988305062690407793}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.71991706
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &-1337032904263189448
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Crouch
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -2499467786845625618}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 8042885895660450169}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!206 &-802451618106152784
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 3fddbd2501a6a07458e23b5861014e91, type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 43ce84d75e0fdf24d833ccdf958a7d41, type: 2}
    m_Threshold: 0.0625
    m_Position: {x: 0, y: 2.25}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 24941655298cfc64d93300522bcedb52, type: 2}
    m_Threshold: 0.125
    m_Position: {x: 0, y: 4}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 0be246c8c43926f4e92bfe2f42983328, type: 2}
    m_Threshold: 0.1875
    m_Position: {x: 4, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 0be246c8c43926f4e92bfe2f42983328, type: 2}
    m_Threshold: 0.25
    m_Position: {x: -4, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 5558b8adaf267734788a149be4e5ae57, type: 2}
    m_Threshold: 0.3125
    m_Position: {x: -2.25, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 5558b8adaf267734788a149be4e5ae57, type: 2}
    m_Threshold: 0.375
    m_Position: {x: 2.25, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 77528407324c8b24e9141cc0da1de5a1, type: 2}
    m_Threshold: 0.4375
    m_Position: {x: 0, y: -2.25}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: a7dfefcf75be3da43a74fbd38c472b63, type: 2}
    m_Threshold: 0.5
    m_Position: {x: 0, y: -4}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 7a225c89e580e0849877ea1d731c0fcb, type: 2}
    m_Threshold: 0.5625
    m_Position: {x: 1.59, y: 1.59}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 7a225c89e580e0849877ea1d731c0fcb, type: 2}
    m_Threshold: 0.625
    m_Position: {x: -1.59, y: 1.59}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 8e766a13c29687a42a15c95e4496709c, type: 2}
    m_Threshold: 0.6875
    m_Position: {x: 1.59, y: -1.59}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 8e766a13c29687a42a15c95e4496709c, type: 2}
    m_Threshold: 0.75
    m_Position: {x: -1.59, y: -1.59}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: e8b172b448f4bb5418397ceb2287699d, type: 2}
    m_Threshold: 0.8125
    m_Position: {x: 2.83, y: 2.83}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: e8b172b448f4bb5418397ceb2287699d, type: 2}
    m_Threshold: 0.875
    m_Position: {x: -2.83, y: 2.83}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 1
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: c450b2a29b2a67e4fbad0e5fe5b772ef, type: 2}
    m_Threshold: 0.9375
    m_Position: {x: 2.83, y: -2.83}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: c450b2a29b2a67e4fbad0e5fe5b772ef, type: 2}
    m_Threshold: 1
    m_Position: {x: -2.83, y: -2.83}
    m_TimeScale: 1
    m_CycleOffset: 0.5
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 1
  m_BlendParameter: Velocity_x
  m_BlendParameterY: Velocity_y
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 2
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: PlayerAnimatorController
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: Velocity_x
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Velocity_y
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsCrouching
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Turn
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: -3435415822455484320}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 1
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1102 &1988305062690407793
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Movement
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: -3973368668982835819}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: -802451618106152784}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!206 &8042885895660450169
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fe23b6b0689726d4590c669a99341a9e, type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: d24c04c4150522d4796f1d09e090dbbb, type: 2}
    m_Threshold: 0.125
    m_Position: {x: 0, y: 1.65}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 8e6f9c5a71b518b4f88cc159743e2057, type: 2}
    m_Threshold: 0.25
    m_Position: {x: -1.95, y: 0}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 49843220146903240818192667025989, type: 2}
    m_Threshold: 0.375
    m_Position: {x: 1.95, y: 0}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: f82c17676ee24884d89eaa9cd954b114, type: 2}
    m_Threshold: 0.5
    m_Position: {x: 0, y: -1.65}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 103e1a793ce8d7a4b9b28732eb01df9c, type: 2}
    m_Threshold: 0.625
    m_Position: {x: -1.35, y: 1.35}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 564170dd966b3614c8bc430b575b746c, type: 2}
    m_Threshold: 0.75
    m_Position: {x: 1.35, y: 1.35}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 4a48fba62c6647e4480515744c5d2434, type: 2}
    m_Threshold: 0.875
    m_Position: {x: -1.35, y: -1.35}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 6c9abfe60260bd54c94d47aefe49dbe1, type: 2}
    m_Threshold: 1
    m_Position: {x: 1.35, y: -1.35}
    m_TimeScale: 0.5
    m_CycleOffset: 0
    m_DirectBlendParameter: Velocity_x
    m_Mirror: 0
  m_BlendParameter: Velocity_x
  m_BlendParameterY: Velocity_y
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 2
